[package]
name = "tasktest"
version = "0.1.0"
authors = ["YumaTaesu <yuma.taesu@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.26.0"
rand = "0.8.3"
winit = "0.24.0"
takeable-option = "0.5.0"
image = "0.23.13"
gl = "*"
libc = "*"

[build-dependencies]
gl_generator = "0.14"

