[package]
name = "Lazarus"
version = "0.1.0"
authors = ["YumaTaesu <yuma.taesu@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
takeable-option = "0.5.0"
image = "0.23.13"
gl = "*"
libc = "*"
regex = "1"
imgui = "0.7.0"

[build-dependencies]
gl_generator = "0.14"


[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
