[package]
name = "Lazarus"
version = "0.1.0"
authors = ["YumaTaesu <yuma.taesu@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
takeable-option = "0.5.0"
gl = "*"
imgui = "0.7.0"
imgui-opengl-renderer = "0.11.0"
imgui-glfw-rs = "0.4.1"
glam = { version = "0.13.0", default-features = false, features = ["libm"] }
image = "0.19.0"
noise = "0.7"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false